--- a/frontend/blata-ditz-frontend/src/pages/Checkout/Checkout.css
+++ b/frontend/blata-ditz-frontend/src/pages/Checkout/Checkout.css
@@ -19,7 +19,9 @@
   margin-right: 10px;
 }
 
-.information-container {
+/*INFORMATION*/
+.information-container,
+.payment-container {
   font-weight: 300;
   padding-top: 3rem;
   display: flex;
@@ -29,7 +31,8 @@
   gap: 5rem;
 }
 
-.checkout-customer-details {
+.checkout-customer-details,
+.checkout-payment-details {
   display: flex;
   flex-direction: column;
   gap: 3rem;
@@ -90,11 +93,94 @@
   cursor: pointer;
 }
 /* ORDER OVERVIEW */
-.order-overview {
+.order-overview-container {
   background-color: #131416;
   border: 1px solid #d5d6d9;
   height: auto;
   width: 40%;
   border-radius: 10px;
   padding: 2rem;
+}
+.order-overview {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+  overflow-y: auto;
+}
+.order-products {
+  font-size: 1.4rem;
+  display: flex;
+  flex-direction: row;
+  grid-template-columns: 1 0.5fr 2fr;
+  gap: 1rem;
+}
+
+.product-img {
+  object-fit: cover;
+  width: 80px;
+  height: 80px;
+  flex: 0 0 80px;
+}
+
+.overview-name-price {
+  display: flex;
+  flex-direction: column;
+}
+
+.overview-price {
+  color: #ffcf33;
+}
+
+.order-amount {
+  display: flex;
+  flex-direction: column;
+}
+.overview-subtotal,
+.overview-shipping,
+.overview-total {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.overview-subtotal,
+.overview-shipping {
+  font-size: 1.4rem;
+}
+
+.overview-total {
+  font-size: 1.6rem;
+  margin-top: 15px;
+  font-weight: 700;
+}
+
+/*PAYMENT*/
+.checkout-payment-details {
+  font-size: 1.6rem;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+.payment-contact {
+  display: flex;
+  flex-direction: row;
+  gap: 2rem;
+}
+
+.contact-details {
+  display: flex;
+  flex-direction: column;
+}
+
+.payment-method h1 {
+  font-size: 2rem;
+  color: #ffcf33;
+}
+
+.method-selection {
+  background-color: #131416;
+  border: 1px solid #d5d6d9;
+  border-radius: 10px;
+  padding: 1rem;
 }
