--- a/frontend/blata-ditz-frontend/src/pages/pop-ups/Cart.css
+++ b/frontend/blata-ditz-frontend/src/pages/pop-ups/Cart.css
@@ -2,7 +2,7 @@
   position: absolute;
   top: 45px;
   right: 0;
-  width: 275px;
+  width: 300px;
   background: linear-gradient(
     180deg,
     rgba(7, 7, 9, 1) 0%,
@@ -21,7 +21,15 @@
 .cart-header {
   display: flex;
   flex-direction: row;
-  justify-content: flex-end;
+  justify-content: space-between;
+
+  padding-left: 5px;
+
+  p {
+    color: #ffc919;
+    font-size: 1.75rem;
+    font-weight: 500;
+  }
 }
 
 .close-cart-button {
@@ -41,6 +49,14 @@
   color: #ffd033;
 }
 
+.empty-cart {
+  text-align: center;
+  color: #777;
+  font-size: 1.25rem;
+  padding: 50px 0;
+  border-radius: 8px;
+}
+
 .cart-list {
   max-height: 200px;
   overflow-y: auto;
@@ -54,31 +70,93 @@
   font-size: 1.25em;
 }
 
-.cart-item-line1 {
+.item-details-row {
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
-
-  color: white;
-  font-size: 1.5rem;
+  align-items: center;
+  width: 100%;
+  margin-bottom: 8px;
 }
 
-.item-price {
-  color: #ffd033;
+.item-name {
   font-weight: 600;
+  font-size: 1.25rem;
+  color: white;
+  max-width: 60%;
+  white-space: pre-wrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.item-price-total {
+  font-size: 1.1rem;
+  font-weight: bold;
+  color: #ffd033;
+  min-width: 100px;
+  text-align: right;
+}
+
+.quantity-controls {
+  display: flex;
+  align-items: center;
+  border: 1px solid #ccc;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.05);
+  width: fit-content;
+}
+
+.qty-button {
+  background-color: black;
+  font-weight: bold;
+  color: white;
+
+  border: none;
+  cursor: pointer;
+
+  padding: 5px 10px;
+  font-size: 1.1rem;
+
+  transition: background-color 0.2s;
+  height: 30px;
+  width: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.qty-button.minus {
+  border-radius: 6px 0 0 6px;
+}
+.qty-button.plus {
+  border-radius: 0 6px 6px 0;
+}
+
+.item-qty-value {
+  padding: 0 10px;
+  text-align: center;
+  font-weight: 500;
+  font-size: 1.1rem;
+  min-width: 25px;
+
+  color: white;
+}
+
+.cart-footer {
+  padding-top: 25px;
+  border-top: 1px solid #ddd;
+  margin-top: 25px;
 }
 
 .cart-total {
   display: flex;
   justify-content: space-between;
-
-  font-weight: 500;
-  font-size: 1.2rem;
+  font-size: 1.4rem;
+  font-weight: 700;
+  margin-bottom: 20px;
   color: white;
+}
 
-  padding-top: 10px;
-  border-top: 1px solid #ccc;
-  margin-bottom: 10px;
+.cart-total span:last-child {
+  color: #ffd033;
 }
 
 .cart-footer-checkout {
@@ -90,16 +168,22 @@
 }
 
 .checkout-button {
-  width: 40%;
-  padding: 10px;
-
-  margin-bottom: 8px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-
-  font-size: 1.25rem;
-  font-weight: 600;
+  width: 100%;
+  padding: 15px;
   background-color: #ffd033;
-  color: #333;
+  color: black;
+  border: none;
+  border-radius: 10px;
+  font-size: 1.1rem;
+  font-weight: bold;
+  cursor: pointer;
+  transition: background-color 0.2s;
+}
+
+.checkout-button:hover:not(:disabled) {
+  background-color: #ffc919;
+}
+.checkout-button:disabled {
+  background-color: #aaa;
+  cursor: not-allowed;
 }
