--- a/frontend/blata-ditz-frontend/src/pages/Checkout/Checkout.css
+++ b/frontend/blata-ditz-frontend/src/pages/Checkout/Checkout.css
@@ -2,10 +2,11 @@
   display: flex;
   flex-direction: column;
   padding: clamp(1rem, 2vw, 1.5rem) clamp(1rem, 8vw, 8rem);
+  margin-bottom: 30px;
 }
 
 .selectedCheckout {
-  color: #ffcf33;
+  color: #ffcf33 !important;
 }
 
 .checkout-header h1 {
@@ -17,6 +18,7 @@
 .checkout-header span {
   font-size: 1.6rem;
   margin-right: 10px;
+  color: white;
 }
 
 /*INFORMATION*/
@@ -37,6 +39,7 @@
   flex-direction: column;
   gap: 3rem;
   flex: 1;
+  position: relative;
 }
 .info-input {
   display: flex;
@@ -75,14 +78,20 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: center;
+
   margin-top: 2rem;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
 
 .return-cart-btn {
   font-size: 1.6rem;
   color: #ffcf33;
   cursor: pointer;
+  display: flex;
+  align-items: center;
 }
 .proceed-btn {
   background-color: #ffcf33;
@@ -91,11 +100,14 @@
   padding: 1.2rem 3rem;
   border-radius: 10px;
   cursor: pointer;
+  font-size: 1.4rem;
+  font-weight: 500;
 }
 /* ORDER OVERVIEW */
 .order-overview-container {
   background-color: #131416;
   border: 1px solid #d5d6d9;
+  min-height: 60vh;
   height: auto;
   width: 40%;
   border-radius: 10px;
@@ -125,6 +137,7 @@
 
 .overview-name-price {
   display: flex;
+  font-size: 1.6rem;
   flex-direction: column;
 }
 
@@ -146,11 +159,11 @@
 
 .overview-subtotal,
 .overview-shipping {
-  font-size: 1.4rem;
+  font-size: 1.6rem;
 }
 
 .overview-total {
-  font-size: 1.6rem;
+  font-size: 2rem;
   margin-top: 15px;
   font-weight: 700;
 }
@@ -165,7 +178,7 @@
 .payment-contact {
   display: flex;
   flex-direction: row;
-  gap: 2rem;
+  gap: 3rem;
 }
 
 .contact-details {
@@ -182,5 +195,49 @@
   background-color: #131416;
   border: 1px solid #d5d6d9;
   border-radius: 10px;
-  padding: 1rem;
+}
+.method {
+  border-bottom: 1px solid #d5d6d9;
+  padding: 1.5rem 2.5rem;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  overflow: hidden;
+}
+
+.payment {
+  accent-color: #ffcf33;
+  margin-right: 15px;
+}
+
+.logo-container {
+  height: 30px;
+}
+
+.card-logos {
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+}
+.logo-container img {
+  width: 70px;
+  height: 100%;
+  object-fit: cover;
+}
+
+/*CHECKOUT PROCESSING*/
+.checkout-text {
+  color: #d5d6d9;
+  text-align: center;
+  font-size: 2.4rem;
+  font-weight: 600;
+}
+
+.checkout-page {
+  height: 80vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #070709;
 }
