--- a/frontend/blata-ditz-frontend/src/pages/UserOrders.css
+++ b/frontend/blata-ditz-frontend/src/pages/UserOrders.css
@@ -25,7 +25,7 @@ li {
   gap: clamp(2rem, 4vw, 5rem);
 }
 
-.user-edit-header {
+.user-view-header {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -34,7 +34,7 @@ li {
   margin-bottom: 10px;
 }
 
-.user-edit-header h3 {
+.user-view-header h3 {
   margin: 0;
   font-size: 1.8rem;
   font-weight: 500;
@@ -178,7 +178,7 @@ li {
   text-overflow: ellipsis;
 }
 
-.user-orders-popup-overlay {
+.user-order-popup-overlay {
   position: fixed;
   top: 0;
   left: 0;
@@ -192,7 +192,7 @@ li {
   background-color: rgba(0, 0, 0, 0.5);
 }
 
-.user-orders-popup {
+.user-order-popup {
   display: flex;
   z-index: 999;
   background-color: #131416;
@@ -205,11 +205,11 @@ li {
   overflow-y: auto;
 }
 
-.user-orders-popup-content {
+.user-order-popup-content {
   padding: 0 2rem 2rem 2rem;
 }
 
-.orders-id {
+.order-id {
   margin-bottom: 20px;
 }
 .order-id-title {
@@ -224,12 +224,12 @@ li {
   flex-direction: row;
   justify-content: space-between;
 }
-.first-column,
-.second-column {
+.left-column,
+.right-column {
   width: 49%;
 }
 
-.order-details {
+.order-detail {
   display: flex;
   flex-direction: column;
   font-weight: 300;
@@ -250,24 +250,24 @@ li {
   font-size: 1.6rem;
 }
 
-.order-details-status {
+.order-detail-status {
   display: flex;
   flex-direction: row;
   gap: 2rem;
   overflow-x: auto;
 }
-.details-status-payment,
-.details-status-order {
+.detail-status-payment,
+.detail-status-order {
   display: flex;
   flex-direction: column;
 }
 
-.details-status-payment-table select {
+.detail-status-payment-table select {
   padding: 1.2rem 0.5rem !important;
   width: 12rem !important;
 }
-.details-status-payment select,
-.details-status-order select {
+.detail-status-payment select,
+.detail-status-order select {
   background-color: black;
   padding: 8px;
   border: 1px solid #878787;
@@ -282,21 +282,23 @@ li {
   cursor: pointer;
 }
 
-.order-details-columnHeader {
+.order-detail-header {
   display: grid;
-  grid-template-columns: 1fr 0.3fr 1fr 3fr 1fr;
+  grid-template-columns: 1fr 3fr 0.5fr;
+  column-gap: 2rem;
   margin-bottom: 8px;
   color: #ffcf33;
   margin-top: 8px;
   font-size: 1.6rem;
 }
-.order-details-columnHeader,
-.order-details-list,
-.order-details-amountbreakdown {
+
+.order-detail-header,
+.order-detail-list,
+.order-detail-amount {
   padding: 0 2rem;
 }
 
-.order-details-list {
+.order-detail-list {
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -304,27 +306,28 @@ li {
 
 .order-entry {
   display: grid;
-  grid-template-columns: 1fr 0.3fr 1fr 3fr 1fr;
+  grid-template-columns: 1fr 3fr 0.5fr;
+  column-gap: 2rem;
   font-size: 1.6rem;
 }
 
-.order-details-img {
+.order-detail-img {
   width: 90px;
   height: 70px;
   margin-right: 10px;
 }
 
-.order-details-item-img {
+.order-detail-item-img {
   object-fit: cover;
   width: 100%;
   height: 100%;
 }
 
-.order-details-name {
+.order-detail-name {
   padding-right: 3rem;
 }
 
-.order-details-amountbreakdown {
+.order-detail-amount {
   margin-top: 30px;
 
   font-size: 1.6rem;
@@ -332,13 +335,13 @@ li {
   flex-direction: column;
   gap: 0.2rem;
 }
-.order-amountbreakdown-details {
+.order-amount-row {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
 }
 
-.amountbreakdown-details-total {
+.amount-row-total {
   font-weight: 600;
   color: #ffcf33;
 }
