--- a/frontend/blata-ditz-frontend/src/pages/AdminInventory.css
+++ b/frontend/blata-ditz-frontend/src/pages/AdminInventory.css
@@ -95,7 +95,7 @@ li {
 .product-table-header,
 .product-table-rows {
   display: grid;
-  grid-template-columns: 1fr 3fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1.25fr 3fr 1fr 1fr 1fr 1fr;
   gap: 15px;
   padding: 5px 10px;
   align-items: center;
@@ -123,7 +123,7 @@ li {
 .table-header-cell {
   display: flex;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
   min-height: 70px;
   margin-bottom: 0;
   padding: 5px 0;
@@ -150,8 +150,10 @@ li {
 .product-cell-name {
   display: block;
   font-size: 1.5rem;
-  line-height: 1.3;
+
   padding-right: 30px;
+  align-items: center;
+  justify-content: center;
 }
 
 .brand-header {
