--- a/frontend/blata-ditz-frontend/src/pages/UserDashboard.css
+++ b/frontend/blata-ditz-frontend/src/pages/UserDashboard.css
@@ -14,6 +14,7 @@ li {
   display: flex;
   flex-direction: column;
   padding: clamp(1rem, 2vw, 1.5rem) clamp(1rem, 8vw, 8rem);
+  min-height: 70vh;
 }
 .header h1 {
   font-size: 2.4rem;
