--- a/frontend/blata-ditz-frontend/src/pages/pop-ups/SupplierPopups.css
+++ b/frontend/blata-ditz-frontend/src/pages/pop-ups/SupplierPopups.css
@@ -134,6 +134,10 @@
   gap: 3rem;
 }
 
+.status-dropdown {
+  color: white;
+}
+
 .supplier-details-value select {
   background-color: black;
   padding: 7px;
@@ -240,6 +244,8 @@
   cursor: pointer;
   font-weight: bold;
   flex: 1;
+  text-transform: uppercase;
+  font-size: 1.1rem;
 }
 
 .delete-supplier-final-btn:hover {
@@ -471,4 +477,40 @@
   display: flex;
   gap: 1.5rem;
   margin-top: 1.5rem;
+}
+
+.success-backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.75); /* Dark overlay */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1003; /* Ensure it's above other popups */
+}
+
+.success-modal {
+  background-color: #1a1a1c;
+  padding: 30px;
+  border-radius: 8px;
+  width: 90%;
+  max-width: 30vw;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
+  text-align: center;
+}
+
+.success-modal h3 {
+  font-size: 1.75rem;
+  color: #ffcf33; /* Green color for success */
+  margin-top: 0;
+  margin-bottom: 15px;
+}
+
+.success-modal p {
+  font-size: 1.25rem;
+  color: #cccccc;
+  margin-bottom: 25px;
 }
