fixed frontend routes and ui
connected orders route in navbar, fixed orders layout in user orders (also affects dashboard css)

--- a/frontend/blata-ditz-frontend/src/pages/UserOrders.css
+++ b/frontend/blata-ditz-frontend/src/pages/UserOrders.css
@@ -147,7 +147,7 @@ li {
 .user-orders-columnHeader,
 .user-orders-list {
   display: grid;
-  grid-template-columns: 0.7fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1.6fr 1fr 1fr 1fr;
   font-size: 1.6rem;
   color: #ffcf33;
   justify-content: center;
