--- a/frontend/blata-ditz-frontend/src/pages/AdminUsers.css
+++ b/frontend/blata-ditz-frontend/src/pages/AdminUsers.css
@@ -72,20 +72,29 @@ li {
 .admin-users-table {
   width: 100%;
   margin-top: 20px;
+  overflow: hidden;
+  background-color: #141517;
+  padding-top: 1.3rem;
+  border-radius: 10px;
+  padding: 1rem;
 }
 .users-columnHeader,
 .user-entry {
   display: grid;
-  grid-template-columns: 0.5fr 1fr 1fr 0.8fr 0.7fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1.4fr 1fr;
   width: 100%;
   font-size: 1.4rem;
-  padding: 1rem 0;
-
+  padding: 1rem 1.5rem;
   border-bottom: 0.1px solid #d5d6d986;
 }
-
+.users-columnHeader span,
+.user-entry span {
+  white-space: normal;
+  word-break: break-word;
+}
 .users-columnHeader {
   font-weight: 600;
+  color: #ffcf33;
 }
 .user-entry {
   font-weight: 300;
