Fixed some UI issues User Dashboard

--- a/frontend/blata-ditz-frontend/src/pages/UserDashboard.css
+++ b/frontend/blata-ditz-frontend/src/pages/UserDashboard.css
@@ -309,3 +309,14 @@ li {
   font-weight: 600;
   color: #ffcf33;
 }
+
+.user-orders-list span {
+  text-transform: uppercase;
+}
+
+.close-btn-userorder {
+  width: 30px !important;
+  height: 30px !important;
+  border-radius: 50% !important;
+  padding: 0 !important;
+}
