--- a/frontend/blata-ditz-frontend/src/pages/AdminSuppliers.css
+++ b/frontend/blata-ditz-frontend/src/pages/AdminSuppliers.css
@@ -117,7 +117,7 @@ li {
   padding: 15px 20px;
   color: #ffcf33;
   padding: 1rem 0;
-  border-bottom: 0.1px solid #d5d6d986;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
   text-align: left;
   text-transform: uppercase;
 }
@@ -130,7 +130,7 @@ li {
   padding: 15px 20px;
   color: #ccc;
   padding: 1rem 0;
-  border-bottom: 1px solid #28282b;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
   text-align: left;
 }
 
