--- a/frontend/blata-ditz-frontend/src/pages/AdminUsers.css
+++ b/frontend/blata-ditz-frontend/src/pages/AdminUsers.css
@@ -77,6 +77,7 @@ li {
   padding-top: 1.3rem;
   border-radius: 10px;
   padding: 1rem;
+  color: #ccc;
 }
 .users-columnHeader,
 .user-entry {
@@ -85,8 +86,14 @@ li {
   width: 100%;
   font-size: 1.4rem;
   padding: 1rem 1.5rem;
-  border-bottom: 0.1px solid #d5d6d986;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
 }
+
+.users-columnHeader {
+  font-size: 1.5rem;
+  text-transform: uppercase;
+}
+
 .users-columnHeader span,
 .user-entry span {
   white-space: normal;
@@ -103,4 +110,9 @@ li {
 .users-list {
   overflow-y: auto;
   height: 50vh;
+}
+
+.user-search {
+  text-transform: uppercase;
+  font-size: 1.2rem !important;
 }
