--- a/frontend/blata-ditz-frontend/src/pages/UserProfile.css
+++ b/frontend/blata-ditz-frontend/src/pages/UserProfile.css
@@ -82,7 +82,7 @@ li {
 .main-content h1 {
   margin-top: 0;
   margin-bottom: 1rem;
-  font-size: 2.4rem;
+  font-size: 2rem;
 }
 
 .main-content button {
@@ -92,10 +92,12 @@ li {
   background-color: #ffcf33;
   color: black;
   padding: 18px 24px;
-  font-size: 1.6rem;
-  font-weight: 500;
+  font-size: 1.3rem;
+  font-weight: 600;
   cursor: pointer;
   float: right;
+
+  text-transform: uppercase;
 }
 
 .button-container {
@@ -112,7 +114,7 @@ li {
 
 .user-profile-base {
   color: white;
-  background-image: linear-gradient(to top, #292b30, #070709);
+  background-color: #131416;
   font-size: 1.6rem;
   align-items: center;
   border: 1px solid #d5d6d9;
@@ -126,7 +128,7 @@ li {
 
 .user-profile-info {
   grid-template-columns: 2fr 2fr 2fr;
-  gap: 1rem;
+  gap: 6rem;
   justify-content: center;
 }
 
@@ -147,7 +149,7 @@ input[type="text"] {
 .user-profile-address .form-group label {
   display: block;
   margin-bottom: 2rem;
-  font-size: 2rem;
+  font-size: 1.5rem;
 }
 
 .user-profile-info .form-group input[type="text"],
@@ -155,7 +157,7 @@ input[type="text"] {
 .user-profile-address .form-group input[type="text"] {
   display: block;
   padding: 1.5rem;
-  font-size: 1.5rem;
+  font-size: 1.25rem;
   background-color: #131416;
   border-color: #d5d6d9;
 }
