--- a/frontend/blata-ditz-frontend/src/pages/AdminInventory.css
+++ b/frontend/blata-ditz-frontend/src/pages/AdminInventory.css
@@ -87,53 +87,36 @@ li {
 
 .inventory-list {
   margin-top: 20px;
-  background-color: transparent;
+  background-color: black;
   border-radius: 8px;
   padding: 10px 20px;
-}
-
-.product-table-wrapper {
-  background-color: #131416;
-  border-radius: 8px !important;
 }
 
 .product-table-header,
 .product-table-rows {
   display: grid;
   grid-template-columns: 1.25fr 3fr 1fr 1fr 1fr 1fr;
-  gap: 1px;
-  padding: 5px 15px;
+  gap: 15px;
+  padding: 5px 10px;
   align-items: center;
 }
 
 .product-table-rows {
   margin-bottom: 10px;
-  background-color: #131416;
 }
 
 .product-row-clickable {
   display: contents;
   cursor: pointer;
-}
-
-.product-row-clickable:hover > .product-cell {
-  background-color: #1a1a1c;
-}
-
-.product-row-clickable > .product-cell {
-  border-bottom: 1px solid rgba(255, 255, 255, 0.1) !important;
+  border-bottom: 1px solid #222;
 }
 
 .product-table-header {
-  margin-bottom: 10px;
-  margin-top: 15px;
-}
-
-.table-header-cell {
   font-weight: normal;
-  font-size: 1.4rem !important;
-  color: #ffcf33 !important;
-  text-transform: uppercase;
+  font-size: 1.25rem;
+  color: #ffcf33;
+  margin-bottom: 10px;
+  padding-top: 15px;
 }
 
 .product-cell,
@@ -144,8 +127,7 @@ li {
   min-height: 70px;
   margin-bottom: 0;
   padding: 5px 0;
-  font-size: 1.3rem;
-  color: #ccc;
+  font-size: 1.5rem;
 }
 
 .product-cell-active,
@@ -158,10 +140,6 @@ li {
   min-height: 70px;
 }
 
-.product-id-inventory {
-  word-break: break-all;
-}
-
 .product-cell-image img {
   width: 100px;
   height: 60px;
@@ -171,12 +149,11 @@ li {
 
 .product-cell-name {
   display: block;
-  font-size: 1.3rem;
-  padding-left: 20px;
+  font-size: 1.5rem;
+
   padding-right: 30px;
   align-items: center;
-  justify-content: left;
-  display: flex;
+  justify-content: center;
 }
 
 .brand-header {
@@ -187,7 +164,7 @@ li {
   background-color: #070709;
   border-radius: 5px;
   cursor: pointer;
-  color: #ccc;
+  color: #fff;
   transition: background-color 0.2s;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
 }
@@ -203,8 +180,8 @@ li {
 .brand-name {
   flex-grow: 1;
 
-  font-size: 1.5rem;
-  font-weight: 500;
+  font-size: 1.75rem;
+  font-weight: 400;
 }
 
 .brand-dropdown-icon {
@@ -214,16 +191,21 @@ li {
   transform: rotate(180deg);
 }
 
-.edit-hint-table {
-  width: 100%;
-  font-style: italic;
-  font-size: 1.1rem;
+.add-product-row {
+  display: flex;
+  flex-direction: column;
+  padding: 15px 0 20px 0;
+  margin-top: 1px;
+  border-top: 2px dotted #333;
+}
 
-  margin-left: 1vw;
+.edit-hint {
+  font-style: italic;
+  font-size: 1.25rem;
   margin-right: auto;
 }
 
-.add-product-btn-table {
+.add-product-btn {
   background: none;
   color: #ffcf33;
   border: 1px solid #ffcf33;
@@ -231,6 +213,8 @@ li {
   padding: 10px 20px;
   border-radius: 6px;
   margin-top: 2vh;
+  margin-left: auto;
+  margin-right: auto;
 
   font-size: 1rem;
   font-weight: 500;
@@ -535,7 +519,19 @@ li {
   text-align: center;
 }
 
-.add-product-btn-table:hover {
+.add-product-btn {
+  background-color: #070709;
+  color: #ffcf33;
+  border: 1px solid #ffcf33;
+  padding: 0.75rem 1.5rem;
+  border-radius: 8px;
+  cursor: pointer;
+  font-size: 1rem;
+  font-weight: 500;
+  transition: background-color 0.2s;
+}
+
+.add-product-btn:hover {
   background-color: rgba(255, 207, 51, 0.1); /* Light yellow overlay on hover */
 }
 
@@ -844,7 +840,7 @@ li {
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 1000;
+  z-index: 1000; /* Ensure it's above the edit modal */
 }
 
 .confirmation-modal {
@@ -859,7 +855,7 @@ li {
 
 .confirmation-modal h3 {
   font-size: 1.75rem;
-  color: #ffcf33;
+  color: #ffcf33; /* Red color for warning */
   margin-top: 0;
   margin-bottom: 15px;
 }
@@ -877,7 +873,7 @@ li {
 }
 
 .delete-product-final-btn {
-  background-color: #ffcf33;
+  background-color: #ffcf33; /* Red color for final delete button */
   color: black;
   border: none;
   padding: 10px 20px;
@@ -913,15 +909,4 @@ input[type="number"]::-webkit-inner-spin-button {
 input[type="number"] {
   -moz-appearance: textfield;
   appearance: textfield; /* Standard property */
-}
-
-.add-product-row-table {
-  grid-column: 1 / -1;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-
-  margin-top: 2vh;
-  padding-bottom: 2vh;
 }
