--- a/frontend/blata-ditz-frontend/src/pages/AdminOrders.css
+++ b/frontend/blata-ditz-frontend/src/pages/AdminOrders.css
@@ -137,7 +137,7 @@ li {
 .admin-orders-tab {
   background-color: #010101;
   border-radius: 5px;
-
+  border: 1px solid #d5d6d9;
   width: auto;
   padding: 1rem 2rem;
   overflow: hidden;
@@ -147,10 +147,9 @@ li {
 .admin-orders-tab ul {
   display: flex;
   flex-direction: row;
-  gap: 3rem;
+  gap: 3.2rem;
   justify-content: space-evenly;
-  font-size: 1.4rem;
-  font-weight: 600;
+  font-size: 1.6rem;
   text-transform: uppercase;
   color: #ffcf33;
   flex-wrap: wrap;
@@ -161,48 +160,32 @@ li {
   color: #d5d6d9;
 }
 
-.admin-orders-container {
-  background-color: #131416;
-  border-radius: 8px;
-  padding-top: 30px;
-}
-
 .admin-orders-columnHeader,
 .admin-orders-list {
   display: grid;
   grid-template-columns: 1.5fr 1fr 1fr 1fr 1fr;
-  font-size: 1.4em;
+  font-size: 1.6rem;
   color: #ffcf33;
   justify-content: center;
   padding-left: 2vw;
   gap: 1rem;
   align-items: center;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-}
-
-.admin-orders-columnHeader {
-  text-transform: uppercase;
-  font-size: 1.5rem;
-  font-weight: 500;
-
-  padding-bottom: 15px;
 }
 
 .admin-orders-list {
-  color: #ccc;
-
+  color: white;
+  background-image: linear-gradient(to top, #101011, #070709);
   padding-top: 3rem;
   padding-bottom: 3rem;
+  border-radius: 15px;
   transition: 0.3s ease;
   overflow: hidden;
   cursor: pointer;
 }
-.admin-orders-list:last-child {
-  border-bottom: none;
-}
 
 .admin-orders-list:hover {
-  background-color: #1a1a1c;
+  background-image: none;
+  background-color: #00000080;
 }
 
 .admin-orders-list span,
