--- a/frontend/blata-ditz-frontend/src/pages/AdminReports.css
+++ b/frontend/blata-ditz-frontend/src/pages/AdminReports.css
@@ -83,7 +83,7 @@ li {
 .product-sales-section {
   width: 100%;
   height: fit-content;
-
+  min-height: 60vh;
   border-bottom: 1px dashed rgba(255, 255, 255, 0.155);
   background-color: #131416;
   padding: 10px 20px;
@@ -108,7 +108,7 @@ li {
   margin-right: 0;
   select {
     background-color: #1a1a1a;
-    color: #ccc;
+    color: #d5d6d9;
     font-weight: 300;
 
     padding: 5px 20px;
@@ -127,7 +127,6 @@ li {
 
 .prodsales-table-rows {
   margin-bottom: 10px;
-  color: #ccc;
 }
 
 .clickable-sales-row {
@@ -156,10 +155,6 @@ li {
   font-size: 1.5rem;
 }
 
-.prodsales-cell {
-  font-size: 1.3rem !important;
-}
-
 .product-cell-image {
   min-height: 70px;
 }
@@ -173,16 +168,15 @@ li {
 
 .prodsales-cell-name {
   display: block;
-  font-size: 1.3rem;
+  font-size: 1.5rem;
   line-height: 1.3;
-  padding-right: 50px;
+  padding-right: 10px;
 }
 
 .view-hint-reports {
   font-style: italic;
   font-size: 1.25rem;
   margin-right: auto;
-  padding-bottom: 2vh;
 }
 
 .no-products-sales-message {
@@ -321,6 +315,11 @@ li {
   transition: background-color 0.2s ease;
 }
 
+.lowstock-row:hover .lowstock-cell,
+.lowstock-row:hover .lowstock-cell-name {
+  background-color: #1a1a1a;
+}
+
 .lowstock-cell,
 .lowstock-table-header-cell {
   display: flex;
@@ -359,6 +358,10 @@ li {
   box-shadow: 0 0 5px rgba(255, 0, 0, 0.5);
 }
 
+.critical-stock .lowstock-cell,
+.critical-stock .lowstock-cell-name {
+}
+
 .no-low-stock-message {
   padding: 20px;
   color: #008000;
@@ -391,8 +394,4 @@ li {
 
 .main-content-reports .reports-subheader {
   font-size: 2rem;
-}
-
-.lowstock-supplier {
-  font-size: 1.3rem !important;
 }
