--- a/frontend/blata-ditz-frontend/src/pages/AdminInventory.css
+++ b/frontend/blata-ditz-frontend/src/pages/AdminInventory.css
@@ -873,7 +873,7 @@ li {
 }
 
 .delete-product-final-btn {
-  background-color: #ffcf33; /* Red color for final delete button */
+  background-color: #ffcf33;
   color: black;
   border: none;
   padding: 10px 20px;
@@ -908,5 +908,5 @@ input[type="number"]::-webkit-inner-spin-button {
 
 input[type="number"] {
   -moz-appearance: textfield;
-  appearance: textfield; /* Standard property */
+  appearance: textfield;
 }
